--- a/ocs2_dancer/dancer_interface/include/dancer_interface/package_path.h.in
+++ b/ocs2_dancer/dancer_interface/include/dancer_interface/package_path.h.in
@@ -33,7 +33,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #include <string>
 
 namespace ocs2 {
-namespace wukong4 {
+namespace dancer {
 
 /** Gets the path to the package source directory. */
 inline std::string getPath() {
